--- a/app/views/doners/show.html.erb
+++ b/app/views/doners/show.html.erb
@@ -8,6 +8,7 @@
          
            
             <h3><%= @doner.name %></h3>
+            <%=image_tag @doner.image.url(:medium)%>
          
         </div>
         <div class="card-body">
