--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,19 @@
 </head>
 <body>
 	<!-- flash messages -->
-	<p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+	<%if notice%>
+		<p class="notice alert alert-success"><%= notice %></p>
+	<%end%>
+	
+	<%if alert%>
+    	<p class="alert alert-danger"><%= alert %></p>
+    <%end%>
+    <br/>
+    <br/>
 
 
 <%= yield %>
+<p style="text-align: center">Copyright 2018 EagleForce Foundation Inc. All RIghts Reserved.</p>
 
 </body>
 </html>
