--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,3 +39,73 @@ body {
 .card-footer {
 	font-size: 18px;
 }
+
+
+/*pagination kaminari*/
+.pagination a, .pagination span.current, .pagination span.gap {
+    float: left;
+    padding: 0 14px;
+    line-height: 28px;
+    text-decoration: none;
+    // background-color: white;
+    border: 2px solid #DDD;
+    border-left-width: 0;
+    font-weight: bold;
+}
+.pagination a {
+    color:grey;
+  }
+
+.pagination {
+    border-left: 1px solid #ddd;
+    .first{
+        padding : 0;
+        float: none;
+        border: none;
+
+    }
+    .prev {
+        padding : 0;
+        float: none;
+        border: none;
+    }
+    .page{
+        padding : 0;
+        float: none;
+        border: none;
+    }
+    .next{
+        padding : 0;
+        float: none;
+        border: none;
+
+    }
+    .last{
+        padding : 0;
+        float: none;
+        border: none;
+    }
+}
+/*!pagination kaminari*/
+
+
+.welcome {
+  text-align: center;
+  font: bold 37px Sans-Serif;
+  padding: 40px 0;
+
+  color: white;
+  text-shadow: 0 1px 0 #ccc,
+               0 2px 0 #c9c9c9,
+               0 3px 0 #bbb,
+               0 4px 0 #b9b9b9,
+               0 5px 0 #aaa,
+               0 6px 1px rgba(0,0,0,.1),
+               0 0 5px rgba(0,0,0,.1),
+               0 1px 3px rgba(0,0,0,.3),
+               0 3px 5px rgba(0,0,0,.2),
+               0 5px 10px rgba(0,0,0,.25),
+               0 10px 10px rgba(0,0,0,.2),
+               0 20px 20px rgba(0,0,0,.15);
+}
+
