--- a/app/assets/stylesheets/doners.scss
+++ b/app/assets/stylesheets/doners.scss
@@ -30,4 +30,201 @@ cursor:pointer;
 
 
 
+// animatedbutton
 
+$animatedbuttoncolor: white;
+.animatedbutton{
+  display:inline-block;
+  font-size:1.8em;
+  padding:1em 1.5em; 
+  font-family:Gill Sans, "Gill Sans", sans-serif;
+  font-weight:700;
+  letter-spacing:-1px;
+  text-transform:uppercase;
+  text-decoration:none;
+  margin:3em;
+  border:solid 2px $animatedbuttoncolor;
+  color:$animatedbuttoncolor !important;
+  border-radius:0.4em;
+  transition:all 0.3s linear;
+  animation-iteration-count: infinite;
+  
+  &:hover{
+    // color:#ffffff !important;
+    color:grey !important;
+    background:$animatedbuttoncolor;
+    animation:none;
+  }
+}
+
+.animatedbutton1{
+   animation-duration: 2s;
+   animation-name: pulse;
+
+}
+
+
+.animatedbutton2{
+   animation-duration: 1s;
+   animation-name: shaker;
+}
+
+.animatedbutton3{
+   animation-duration: 1.5s;
+   animation-name: shrink;
+}
+
+.animatedbutton4{
+   animation-duration: 0.75s;
+   animation-name: jump;
+}
+
+.animatedbutton5{
+    animation-name: pulse_animation;
+    animation-duration: 2.5s;
+    
+
+}
+@keyframes pulse {
+
+
+  0% {
+    opacity:1;
+  }
+
+  50% {
+    opacity:0.5;
+    box-shadow:0px 0px 5px 0px $animatedbuttoncolor;
+
+  }
+  
+  100%{
+    opacity:1;
+    box-shadow:none;
+  }
+}
+
+@keyframes pulse_animation {
+    0% { transform: scale(1); }
+   
+    50% { transform: scale(1.1); box-shadow: 0px 0px 50px 0px $animatedbuttoncolor;}
+   
+    100% { transform: scale(1); }
+}
+
+
+@keyframes shaker {
+  0% {
+    transform:rotate(0deg);
+  }
+
+  29% {
+    transform:rotate(0deg);
+  }
+
+
+  30% {
+    transform:rotate(1deg);
+  }
+
+  31% {
+    transform:rotate(2deg);
+  }
+
+  33% {
+    transform:rotate(1deg);
+  }
+
+  35% {
+    transform:rotate(0deg);
+  }
+
+  37% {
+    transform:rotate(-1deg);
+  }
+
+  39% {
+    transform:rotate(-2deg);
+  }
+
+  41% {
+    transform:rotate(-1deg);
+  }
+
+  43% {
+    transform:rotate(0deg);
+  }
+
+
+  45% {
+    transform:rotate(1deg);
+  }
+
+  47% {
+    transform:rotate(2deg);
+  }
+
+  49% {
+    transform:rotate(1deg);
+  }
+
+  51% {
+    transform:rotate(0deg);
+  }
+
+  53% {
+    transform:rotate(-1deg);
+  }
+
+  55% {
+    transform:rotate(-2deg);
+  }
+
+  57% {
+    transform:rotate(-1deg);
+  }
+
+  59% {
+    transform:rotate(0deg);
+  }
+
+
+  100%{
+    transform:rotate(0deg);
+  }
+}
+
+@keyframes shrink {
+  0% {
+    transform: scaleY(1);
+  }
+
+  49% {
+    transform: scale(0.97, 0.97);
+  }
+
+ 100% {
+    transform: scaleY(1);
+  }
+
+}
+
+@keyframes jump {
+  0% {
+    transform: scale(1,1) translate(0px, 0px);
+  }
+  
+  30%{
+    transform: scale(1,0.8) translate(0px, 10px); 
+  }
+
+  75%{
+    transform: scale(1,1.1) translate(0px, -25px); 
+  }
+  
+ 100% {
+    transform: scale(1,1) translate(0px, 0px);
+  }
+
+}
+// animatedbutton
