--- a/app/views/doners/_form.html.erb
+++ b/app/views/doners/_form.html.erb
@@ -142,7 +142,7 @@
   </div>
 
   <div class="actions">
-    <%=f.submit 'Submit', class: 'btn btn-success btn-lg'%>
+    <%=f.submit 'Submit', class: 'btn btn-success btn-lg btn-block'%>
    
   </div>
 <% end %>
