--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -37,14 +37,37 @@
   <br/>
   <div class="row">
     <div class="col-md-6 text-center">
-      <%= link_to 'New Doner', new_doner_path, class: "btn btnglow btnglow-2" %>
+      <%= link_to 'View Doners', doners_path, class: "btn btnglow btnglow-8" %>
+    </div>
+    
+
+
+    <div class="col-md-6 text-center">
+      <%= link_to 'View Relationships', relationships_path, class: "btn btnglow btnglow-7" %>
     </div>
   
 
   
+  </div>
+
+
+  <div class="row">
     <div class="col-md-6 text-center">
-      <%= link_to 'View Doners', doners_path, class: "btn btnglow btnglow-3" %>
+      <%= link_to 'New   Doner', new_doner_path, class: "btn btnglow btnglow-2" %>
     </div>
+    
+    <div class="col-md-6 text-center">
+      <%= link_to 'New Relationship', new_relationship_path, class: "btn btnglow btnglow-6" %>
+    </div>
+
+
+    
+
+    
+  </div>
+
+
+
   </div>
 
 </div> <!-- !container -->
