--- a/app/views/doners/edit.html.erb
+++ b/app/views/doners/edit.html.erb
@@ -3,6 +3,6 @@
 
 	<%= render 'form' %>
 
-	<%= link_to 'Show', @doner %> |
-	<%= link_to 'Back', doners_path %>
+	<%= link_to 'Show', @doner, class: "btn btn-info" %> 
+	<%= link_to 'Back', doners_path,class: "btn btn-warning" %>
 </div>
