--- a/app/views/relationships/_form.html.erb
+++ b/app/views/relationships/_form.html.erb
@@ -12,15 +12,15 @@
   <% end %>
 
   <div class="field text-left">
-    <%= f.label :doner_id %><br>
-    <%= f.number_field :doner_id, class: "form-control" %>
+    <%= f.label :donor_id,'Donor ID'%><br>
+    <%= f.number_field :donor_id, class: "form-control" %>
   </div>
   <div class="field text-left">
-    <%= f.label :target %><br>
+    <%= f.label :target,'Target ID' %><br>
     <%= f.number_field :target, class: "form-control" %>
   </div>
   <div class="field text-left">
-    <%= f.label :link_description %><br>
+    <%= f.label :link_description,'Relationship Description' %><br>
     <%= f.text_field :link_description, class: "form-control" %>
   </div>
   <div class="actions">
