--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -24,7 +24,7 @@
 
 	<div class="row">
     <div class="col-md-12 text-center welcome">
-      Welcome to EagleForce Doner Information Management System
+      Welcome to EagleForce Donor Information Management System
     </div>
   </div>
 
@@ -37,7 +37,7 @@
   <br/>
   <div class="row">
     <div class="col-md-6 text-center">
-      <%= link_to 'View Doners', doners_path, class: "btn btnglow btnglow-8" %>
+      <%= link_to 'View Donors', donors_path, class: "btn btnglow btnglow-8" %>
     </div>
     
 
@@ -53,7 +53,7 @@
 
   <div class="row">
     <div class="col-md-6 text-center">
-      <%= link_to 'New   Doner', new_doner_path, class: "btn btnglow btnglow-2" %>
+      <%= link_to 'New   Donor', new_donor_path, class: "btn btnglow btnglow-2" %>
     </div>
     
     <div class="col-md-6 text-center">
