--- a/app/views/relationships/edit.html.erb
+++ b/app/views/relationships/edit.html.erb
@@ -1,39 +1,53 @@
 <div class="container">
 	<h1>Editing Relationship</h1>
 	<div class="row">
-	<div class="col-md-6 text-center">
-
-	<%= render 'form' %>
-</div>
-
+	   <div class="col-md-6">
+	      <%= render 'form' %>
+      </div>
 
 
 
- 	<div class="col-md-6 text-center">
-      <!-- search form -->
-      
-            
-        <%= form_tag(searchdoner_path, :method => "get", remote: true) do %>
-          <%= text_field_tag :donerid,  params[:donerid], placeholder: "Please Enter Doner ID" ,class: "searchinput"%>
 
-          <%#= submit_tag "Search",:class => "btn btn-success" %>
-          <%= button_tag(type: "submit", class: "btn transparent_button", id: "searchdonerbtn") do %>
-              <i class="fa fa-lg fa-search searchicon"></i>
-          <% end %>
-        
-        <% end %>
+   	<div class="col-md-6 text-right">
+        <!-- search form -->
+         <br/>
+
+              
+         <%= form_tag(searchdonor_path, :method => "get", remote: true) do %>
+            <%= text_field_tag :donorid,  params[:donorid], placeholder: "Please Enter Donor ID" ,class: "searchinputwithoutanimation"%>
+
+            <%#= submit_tag "Search",:class => "btn btn-success" %>
+            <%= button_tag(type: "submit", class: "btn transparent_button", id: "searchdonorbtn") do %>
+                <i class="fa fa-lg fa-search searchicon"></i>
+            <% end %>
           
-        
-     
-      <!-- !search form -->
-    </div>
+         <% end %>
+            
+          
+       
+        <!-- !search form -->
+        <br/>
+        <br/>
 
 
-    <div id="relationshipsearchresults">
-      
-    </div>
-</div>
 
+         <!-- <div id="donersearchresults" class="col-md-6">
+           
+         </div> -->
+
+         <div class="modal fade" id="donorInformationModal"  tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+               <div class="modal-content">
+               </div>
+            </div>
+         </div>
+
+
+
+
+
+      </div>
+   </div>
 
 
 	<%= link_to 'Show', @relationship, class: "btn btn-info" %> 
@@ -44,15 +58,15 @@
 
 </div>
 <script>
-$('#searchdonerbtn').click(function(params) {
+// $('#searchdonorbtn').click(function(params) {
 
-  var donorId = $('#donerid').val();
+//   var donorId = $('#donorid').val();
 
-  $.ajax({url: '/doners/' + donorId}).done(function(response){
-    $('#relationshipsearchresults').html(response);
-    console.log(response);
-  });
+//   $.ajax({url: '/donors/' + donorId}).done(function(response){
+//     $('#relationshipsearchresults').html(response);
+//     console.log(response);
+//   });
     
 
-   });
+//    });
 </script>
