--- a/app/views/relationships/new.html.erb
+++ b/app/views/relationships/new.html.erb
@@ -1,7 +1,59 @@
 <div class="container">
 	<h1>New Relationship</h1>
+	<div class="row">
+		 <div class="col-md-6">
 
-	<%= render 'form' %>
+			<%= render 'form' %>
+
+		</div>
+
+
+
+
+		<div class="col-md-6 text-right">
+	        <!-- search form -->
+	         <br/>
+
+	              
+	         <%= form_tag(searchdonor_path, :method => "get", remote: true) do %>
+	            <%= text_field_tag :donorid,  params[:donorid], placeholder: "Please Enter Donor ID" ,class: "searchinputwithoutanimation"%>
+
+	            <%#= submit_tag "Search",:class => "btn btn-success" %>
+	            <%= button_tag(type: "submit", class: "btn transparent_button", id: "searchdonorbtn") do %>
+	                <i class="fa fa-lg fa-search searchicon"></i>
+	            <% end %>
+	          
+	         <% end %>
+	            
+	          
+	       
+	        <!-- !search form -->
+	        <br/>
+	        <br/>
+
+
+
+	         <!-- <div id="donersearchresults" class="col-md-6">
+	           
+	         </div> -->
+
+	         <div class="modal fade" id="donorInformationModal"  tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	            <div class="modal-dialog" role="document">
+	               <div class="modal-content">
+	               </div>
+	            </div>
+	         </div>
+
+
+
+
+
+	     
+	    </div>
+	</div>
+
+
+
 
 	<%= link_to 'Back', relationships_path, class: "btn btn-warning" %>
 
